# wafflehacks-backend-workshop

./: .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  index.html  insomnia-workspace.json  openapi.yaml  postman-collection.json  pyproject.toml
better_todos/: __init__.py  app.py  authentication.py  config.py  cors.py
better_todos/blueprints/: __init__.py  categories.py  tags.py  todos.py
better_todos/database/: __init__.py  category.py  engine.py  helpers.py  tag.py  todo.py
better_todos/schema/: base.py  categories.py  tags.py  todo.py
