[tool.poetry]
name = "better_todos"
version = "0.1.0"
description = "A better to-do list webapp"
authors = ["Alex Krantz <alex@krantz.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
