[tool.poetry]
name = "better_todos"
version = "0.1.0"
description = "A better to-do list webapp"
authors = ["Alex Krantz <alex@krantz.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
python-dotenv = "^0.19.0"
Flask-SQLAlchemy = "^2.5.1"
Flask-HTTPAuth = "^4.4.0"
marshmallow = "^3.13.0"
flask-marshmallow = "^0.14.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.1"
Flask-Cors = "^3.0.10"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
